tests/snapshots/utils/convert/bad_param.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 45
info:
  program: kermit
  args:
    - utils
    - convert
    - "100"
    - foo
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: invalid value 'foo' for '<UNIT>'
  [possible values: alph, gatto, atto]

For more information, try '--help'.
