tests/snapshots/utils/convert/from_gatto.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 45
info:
  program: kermit
  args:
    - utils
    - convert
    - "1"
    - gatto
---
success: true
exit_code: 0
----- stdout -----
atto:	1000000000
gatto:	1
alph:	0.000000001

----- stderr -----
