tests/snapshots/utils/convert/missing_param.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 38
info:
  program: kermit
  args:
    - utils
    - convert
    - "100"
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: the following required arguments were not provided:
  <UNIT>

Usage: kermit utils convert <AMOUNT> <UNIT>

For more information, try '--help'.
