tests/snapshots/utils/convert/no_params.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 38
info:
  program: kermit
  args:
    - utils
    - convert
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: the following required arguments were not provided:
  <AMOUNT>
  <UNIT>

Usage: kermit utils convert <AMOUNT> <UNIT>

For more information, try '--help'.
